<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    
    <TableRow>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/firstInput" />
        <EditText
            android:id="@+id/firstInput"
            android:layout_width="fill_parent" />
    </TableRow>
    
    <TableRow>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/secondInput" />
        <EditText
            android:id="@+id/secondInput"
            android:layout_width="fill_parent" />
    </TableRow>
    
    <TableRow>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/result" />
        <EditText
            android:id="@+id/result"
            android:layout_width="fill_parent" />
    </TableRow>
    
    <TableRow>
        <Button
            android:text="@string/buttonPlus" 
            android:id="@+id/buttonPlus"	
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
			android:text="@string/buttonMinus" 
 			android:id="@+id/buttonMinus"	
 			android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </TableRow>
    
    <TableRow>
        <Button
            android:text="@string/buttonMultiply" 
            android:id="@+id/buttonMultiply"	
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
			android:text="@string/buttonDivide" 
 			android:id="@+id/buttonDivide"	
 			android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </TableRow>
    
    
    
</TableLayout>